Tweaked browse index creation Java params.