@@ -21,9 +21,9 @@ function build_browse
     extra_jvm_opts=$4
 
     if [ "$skip_authority" = "1" ]; then
-        java ${extra_jvm_opts} -Dfile.encoding="UTF-8" -Xmx1024m -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -Dfield.preferred=heading -Dfield.insteadof=use_for -cp $CLASSPATH CreateBrowseSQLite "$bib_index" "$field" "${browse}_browse.db"
+        java ${extra_jvm_opts} -Dfile.encoding="UTF-8" -Xmx2G -Dfield.preferred=heading -Dfield.insteadof=use_for -cp $CLASSPATH CreateBrowseSQLite "$bib_index" "$field" "${browse}_browse.db"
     else
-        java ${extra_jvm_opts} -Dfile.encoding="UTF-8" -Xmx1024m -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -Dfield.preferred=heading -Dfield.insteadof=use_for -cp $CLASSPATH CreateBrowseSQLite "$bib_index" "$field" "$auth_index" "${browse}_browse.db"
+        java ${extra_jvm_opts} -Dfile.encoding="UTF-8" -Xmx2G -Dfield.preferred=heading -Dfield.insteadof=use_for -cp $CLASSPATH CreateBrowseSQLite "$bib_index" "$field" "$auth_index" "${browse}_browse.db"
     fi
 
     mv "${browse}_browse.db" "$index_dir/${browse}_browse.db-updated"
